corrected some spacing

--- a/_includes/critical.scss
+++ b/_includes/critical.scss
@@ -20,6 +20,7 @@ $text-color: rgb(200,200,200);
     font-style: normal;
 
 }
+
 body {
     background-color: $main-background-color;
     color: $text-color;
@@ -64,7 +65,8 @@ a {
     font-size: 2em;
 }
 .wrapper {
-    margin:0 auto;
+    margin:1em auto;
+    // padding:1em;
 }
 .site-nav { 
     margin-top: 0;
@@ -109,14 +111,17 @@ a, a:visited, a:hover .page-link {
     border-right: 0;
     border-bottom: 0;
     // margin: 0px -5px 0px -5px;
-    margin:0;
-    padding:0;
+    // margin:0;
+    // margin:5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     // padding-left: 30px;
     // padding-right: 30px;
+}
+.site-title {
+    padding-left: 1em;
 }
 .home-wrapper {
     display: flex;
@@ -169,7 +174,7 @@ a, a:visited, a:hover .page-link {
     justify-content: left;
     align-items: left;
     gap: 3em;
-    // margin:5em;
+    // padding:1em;
     flex-direction: column;
     line-height: 2.5em;
     flex: 1 100%;
@@ -178,6 +183,8 @@ a, a:visited, a:hover .page-link {
     align-items: left;
     text-align: left;
     font-size: 1.25em;
+    // margin: 0 auto;
+    margin: 1em;
 }
 
 .dt-published {
